--- a/views/index.html
+++ b/views/index.html
@@ -585,6 +585,7 @@
 			data.author = schema.author;
 			data.icon = schema.icon;
 			data.type = schema.type;
+			data.group = schema.group;
 			data.version = schema.version;
 			data.args = schema.args;
 			data.editor = schema.editor ? CLONE(schema.editor) : {};
